feat: use pydantic dataclass instead of dataclass

--- a/proto/buf.gen.yaml
+++ b/proto/buf.gen.yaml
@@ -12,3 +12,5 @@ plugins:
     # https://github.com/danielgtaylor/python-betterproto
     out: ../src/mcp_server_memos/proto_gen
     strategy: directory
+    opt:
+      - pydantic_dataclasses
