--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "mcp>=1.1.0",
-    "betterproto[compiler]>=2.0.0b6"
+    "betterproto[compiler]>=2.0.0b6",
+    "grpclib>=0.4.7",
 ]
