--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,16 @@ dependencies = [
     "mcp>=1.1.0",
     "betterproto[compiler]>=2.0.0b6",
     "grpclib>=0.4.7",
+    "pydantic>=2.10.3",
 ]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+]
+
+[project.scripts]
+mcp-server-memos = "mcp_server_memos.cli:main"
