fix: use jsonschema for return list

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "mcp-server-memos"
-version = "0.1.4"
+version = "0.1.5"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -24,3 +24,6 @@ mcp-server-memos = "mcp_server_memos:main"
 
 [project.urls]
 Repository = "https://github.com/RyoJerryYu/mcp-server-memos-py"
+
+[tool.uv]
+package = true
