--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.15"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
+license = { file = "LICENSE" }
 dependencies = [
     "mcp>=1.1.0",
     "betterproto[compiler]>=2.0.0b6",
